fixed overflow bug, centered footer, hid animation on mobile, fixed img issue in products, fixed voucher

--- a/resources/assets/js/components/footer/styles.css
+++ b/resources/assets/js/components/footer/styles.css
@@ -104,3 +104,10 @@
     text-align: left;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .footer-container,
+  .newsletter-container {
+    margin: 0 auto;
+  }
+}
